--- a/src/screens/Day/dayscreens.css
+++ b/src/screens/Day/dayscreens.css
@@ -200,7 +200,7 @@
         }
         
         .momentRow {
-          width: 90%;
+          width: 100%;
           display: flex;
           justify-content: space-between;
           align-items: center;
@@ -292,4 +292,9 @@
           outline: none;
         }
 
+        .mouseTooltip {
+          display: none;
+        }
+
+   
         }
