--- a/src/screens/Profile/profile.css
+++ b/src/screens/Profile/profile.css
@@ -168,7 +168,7 @@ margin-bottom: 2px;
 
 @media only screen and (min-width: 0px) and (max-width: 480px) { 
   .mainProfileScreen {
-    height: 75vh;
+    height: 100h;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -178,7 +178,7 @@ margin-bottom: 2px;
   
   .container.profile {
     height: auto;
-    width: 100%;
+    width: 95%;
     display: flex;
     flex-direction: column;
     justify-content: center;
