--- a/src/components/Charts/FeelingScore/feelingscorechart.css
+++ b/src/components/Charts/FeelingScore/feelingscorechart.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 1201px) {
+@media only screen and (min-width: 1201px) {
 
 #d3demo {
   width: 388px;
@@ -13,7 +13,7 @@
 @media only screen and (min-width: 0px) and (max-width: 480px) { 
 
   #d3demo {
-    width: 95vw;
+    width: 85vw;
     height: 50vh;
   }
   
