--- a/src/components/Header/centralheader.css
+++ b/src/components/Header/centralheader.css
@@ -87,14 +87,14 @@ nav .box {
 
 .menu.active {
   opacity: 1;
-  height: 20vh;
+  height: 5vh;
   width: 100%;
   background-color: #004a22;
   color: whitesmoke;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   transition: all 1s ease-in-out;
 }
 
@@ -104,16 +104,16 @@ nav .box {
 }
 
 .navMenu.active {
+  margin: 0;
+  padding: 0;
+  height: auto;
   width: 100%;
   display: flex;
-  flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
 }
 
 .navMenu li {
   list-style: none;
-  margin: 6px 0;
 }
 
 .listItem a {
