--- a/src/screens/Insight/insightscreen.css
+++ b/src/screens/Insight/insightscreen.css
@@ -64,6 +64,22 @@
     align-items: center;
 }
 
+.tab,
+.tabs {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tab .tile {
+  margin: 0;
+  min-width: 388px;
+}
+
+
 .nav-tabs .nav-link {
   color: rgba(0,0,0,0.2);
 }
@@ -78,7 +94,6 @@
   background-color: whitesmoke;
 } 
 
-
 .statsRow {
   width: 100%;
   display: flex;
@@ -91,4 +106,5 @@
   font-size: 12px;
   color: #004a22;
 }
+
 }
