--- a/src/screens/Day/dayscreens.css
+++ b/src/screens/Day/dayscreens.css
@@ -64,11 +64,15 @@
 .dateRow {
   width: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 16px;
   padding-bottom: 10px;
   border-bottom: 0.5px dashed rgba(0,0,0,0.2);
+}
+
+.mobileSaveDiv {
+  display: none;
 }
 
 .dateRow label {
@@ -146,13 +150,17 @@
       .row.button button {
         width: auto;
       }
+
+      .mobileDockRow {
+ display: none;
+      }
     }
 
       @media only screen and (min-width: 0px) and (max-width: 480px) { 
 
         .updateday.container,
         .createday.container {
-          height: 100vh;
+          height: 120vh;
           width: 100%;
           display: flex;
           flex-direction: column;
@@ -174,6 +182,13 @@
           text-align: start;
           background-color: whitesmoke;
           box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+        }
+
+
+        .mobileSaveDiv {
+display: flex; 
+flex-direction: row; 
+justify-content: flex-end;
         }
 
         .mobFrame {
@@ -278,9 +293,7 @@
           font-weight: 200;
           color: #004a22;
         }
-  
-  
-  
+
         .formInput,
         .formInput:focus,
         .formInput:active {
@@ -296,5 +309,12 @@
           display: none;
         }
 
+
+        .mobileDockRow {
+          height: 20vh;
+          width: 100%;
+          display: flex;
+          justify-content: flex-start;
+        }
    
         }
