--- a/src/components/Dock/fulldock.css
+++ b/src/components/Dock/fulldock.css
@@ -163,13 +163,14 @@
   }
 
   .mobiledock.container {
-    height: 8vh;
+    height: auto;
     width: auto;
     border-radius: 10px;
     display: flex;
-    justify-content: space-evenly;
-    align-items: flex-end;
+    justify-content: flex-start;
+    align-items: center;
     margin-bottom: 12px;
+    overflow: auto;
   }
   
   .dock.node {
