--- a/src/screens/Week/weekscreen.css
+++ b/src/screens/Week/weekscreen.css
@@ -84,6 +84,11 @@
   border-radius: 2px;
   background-color: #004a22;
 }
+
+.mobileTooltip {
+  display: none;
+}
+
 }
 
 @media only screen and (min-width: 0px) and (max-width: 480px) { 
