--- a/src/screens/Year/yearscreen.css
+++ b/src/screens/Year/yearscreen.css
@@ -97,7 +97,7 @@
 #valuesThree,
 #valuesFour,
 #valuesFive {
-  height: 100%;
+  height: 1000px;
   width: 100%;
   padding: 4px 8px 6px 2px;
 }
@@ -127,12 +127,13 @@
 #visionFour,
 #visionFive
  {
+  height: 1000px;
   width: 100%;
   padding: 4px 8px 6px 2px;
 }
 
 
-.quote {
+.navquote {
   grid-row: 3 / span 2;
   grid-column: 5 / span 2;
 }
@@ -264,7 +265,7 @@
     width: 100%;
   }
 
-  .yeartile.quote {
+  .yeartile.navquote {
     width: 95%;
   }
   
