--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 481px) and (max-width: 2000px) { 
 /* Footer */
 .footer-main {
   height: 25vh;
@@ -69,3 +70,81 @@
   left: 0px;
 }
 
+}
+
+@media only screen and (min-width: 0px) and (max-width: 480px) {  
+  .footer-main {
+    height: 25vh;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        border: 0.5px solid #004a22;
+        background-color: #004a22;
+        padding: 24px 12px 0 12px;
+    }
+
+    .footer-main div:first-child {
+      margin-right: 72px;
+    }
+    
+    .footerColumn {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    }
+    
+    .footer-header {
+    font-weight: 700;
+       color: whitesmoke;
+       width: auto;
+    }
+    
+    .copyright {
+    display: block;
+        background-color: transparent;
+        color: whitesmoke;
+    }
+    
+    .copyright p {
+      color: whitesmoke;
+    }
+    .copyright.logoHeader {
+    filter: brightness(50%);
+    }
+  
+  #fava {
+    color: whitesmoke;
+    opacity: 1;
+    text-decoration: none;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    width: auto;
+    padding: 0;
+    font-weight: 200;
+  }
+  
+  #fava a {
+    position: relative;
+    transition: all 1s linear;
+  }
+  
+  #funderline {
+    width: 100%;
+    height: 1.5px;
+    margin-top: 15px;
+    align-self: flex-end;
+    left: -220px;
+    background-color: whitesmoke;
+    position: absolute;
+    transition: all 1s linear;
+    bottom: 0;
+  }
+  
+  #fava:hover #funderline {
+    left: 0px;
+  }
+
+
+}
