--- a/src/screens/Login/loginscreen.css
+++ b/src/screens/Login/loginscreen.css
@@ -65,6 +65,16 @@ text-align: start;
   filter: brightness(0%) opacity(2.5%);
 }
 
+
+.loginButton {
+  background-color:#004a22;
+  color: whitesmoke;
+  font-family: 'Futura';
+  border: 1px solid #004a22;
+  padding: 2px 3px;
+  border-radius: 5px;
+}
+
 }
 
 @media only screen and (min-width: 0px) and (max-width: 480px) { 
