--- a/src/screens/Year/yearscreen.css
+++ b/src/screens/Year/yearscreen.css
@@ -163,7 +163,7 @@
     height: 100vh;
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
   }
 
