--- a/src/screens/Year/yearscreen.css
+++ b/src/screens/Year/yearscreen.css
@@ -164,7 +164,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
   }
 
   #yeartest {
