--- a/src/components/Tutorial/tutorial.css
+++ b/src/components/Tutorial/tutorial.css
@@ -63,6 +63,7 @@ text-align: start;
     border-radius: 5px;
     background-color: whitesmoke;
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     text-align: start;
