--- a/src/components/Tutorial/tutorial.css
+++ b/src/components/Tutorial/tutorial.css
@@ -2,7 +2,7 @@
 
 .tutorialContainer {
   height: 50vh;
-  width: 50vw;
+  width: 95%;
   background-color: whitesmoke;
   display: flex;
   flex-direction: column;
@@ -58,17 +58,18 @@ text-align: start;
   .tutorialContainer {
     margin-top: 24px;
     height: 50vh;
-    width: 95%;
+    width: 75%;
     padding: 16px 20px; 
     border-radius: 5px;
     background-color: whitesmoke;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     text-align: start;
     box-shadow: 0 10px 10px rgba(0,0,0,0.2);
-    z-index: 1;
+    border: 3px solid #004a22;
+    z-index: 100;
     overflow: scroll;
   }
 
