--- a/src/components/Tutorial/tutorial.css
+++ b/src/components/Tutorial/tutorial.css
@@ -2,7 +2,7 @@
 
 .tutorialContainer {
   height: 50vh;
-  width: 95%;
+  width: 50vw;
   background-color: whitesmoke;
   display: flex;
   flex-direction: column;
@@ -58,7 +58,7 @@ text-align: start;
   .tutorialContainer {
     margin-top: 24px;
     height: 50vh;
-    width: 75%;
+    width: 90%;
     padding: 16px 20px; 
     border-radius: 5px;
     background-color: whitesmoke;
