--- a/src/screens/Register/registerscreen.css
+++ b/src/screens/Register/registerscreen.css
@@ -9,12 +9,13 @@
 }
 
 .registerContainer {
-  height: 388px;
+  height: auto;
   width: 388px;
   background-color: whitesmoke;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 text-align: start;
   padding: 16px 20px; 
   border-radius: 5px;
