--- a/src/screens/Login/loginscreen.css
+++ b/src/screens/Login/loginscreen.css
@@ -12,8 +12,9 @@
   width: 388px;
   background-color: whitesmoke;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 text-align: start;
   padding: 16px 20px; 
   border-radius: 5px;
