--- a/src/screens/LandingPage/landingpagescreen.css
+++ b/src/screens/LandingPage/landingpagescreen.css
@@ -96,7 +96,6 @@ h2 {
   font-size: 10px;
 }
 
-
 .quote, 
 .insight,
 .blog, 
@@ -121,6 +120,10 @@ margin-bottom: 4px;
   margin-left: 12px;
   text-decoration: none;
   color:#004a22;
+}
+
+.quote h2 {
+  font-style: italic;
 }
 
 .dividingLine {
